--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
         <a href="https://www.youtube.com/channel/UCafVd7uUPOMYSGrzATBYsHQ"><i class="fab fa-youtube"></i></a>
     </span>
     <p>All Rights Reserved. &copy; eVacay Africa </p>
-    <p style="font-size:10px">Site By Proxify Inc &copy; 2018</p>
+    <p style="font-size:10px">Site By Edson Inc &copy; 2018</p>
 </footer>
 
 <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
