--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
 
-    <title>Evacay Tours Africa| Homepage</title>
+    <title>Evacay Tours Africa| Home</title>
     <link rel="icon" type="image/x-icon" href="img/evacay-favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
